plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sashkomusic'
version = '0.0.1-SNAPSHOT'
description = 'sm-library-agent'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.kafka:spring-kafka'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.18.2'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.2'

	// Database
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.postgresql:postgresql'
	implementation 'org.flywaydb:flyway-core:10.21.0'
	implementation 'org.flywaydb:flyway-database-postgresql:10.21.0'

	// Audio metadata tagging
	implementation 'net.jthink:jaudiotagger:3.0.1'

	// File system watching with native macOS support
	implementation 'io.methvin:directory-watcher:0.18.0'

	// AI integration for file matching
	implementation 'dev.langchain4j:langchain4j-spring-boot-starter:1.8.0-beta15'
	implementation 'dev.langchain4j:langchain4j-anthropic-spring-boot-starter:1.8.0-beta15'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
